SPRING WEB FLOW (SWF) CHANGELOG
===============================
http://www.springframework.org

Changes in version 1.0.1 (03.12.2006)
-----------------------------------

Package org.springframework.webflow.config
* Added setMaxConversations and setMaxContinuations methods to FlowExecutorFactoryBean.

Package org.springframework.webflow.context
* ExternalContextHolder now uses a ThreadLocal instead of an InheritableThreadLocal (SWF-206).

Package org.springframework.webflow.conversation
* The default value of the maxConversations property of the SessionBindingConversationManager is
  now 5. It used to be -1 (unlimited).
* Added getConversationIdGenerator and getMaxConversations methods to SessionBindingConversationManager.
* Reduced log level from INFO to DEBUG.

Package org.springframework.webflow.definition
* Added debug logging to FlowDefinitionRegistryImpl.

Package org.springframework.webflow.engine
* The methods getMatchingCriteria, getExecutionCriteria, getTargetStateResolver, and canExecute
  of the Transition class have been made public (SWF-209).
* Added debug logging to FlowAssembler, RefreshableFlowDefinitionHolder and FlowExecutionImplFactory.
* The "alwaysRedirectOnPause" flow execution attribute value can now also be a String.
* Added toString implementations to XmlFlowBuilder and AbstractFlowBuilder.
* Added support for the "name" attribute to the <set> and <evaluate-action> elements in the flow XML.

Package org.springframework.webflow.execution.factory
* The getHolder method on ConditionalFlowExecutionListenerLoader is now private. It has a package
  private return type, so there is no use in it being protected.

Package org.springframework.webflow.execution.repository
* Fixed a bug in FlowExecutionContinuationGroup. It was not correctly handling an update of a
  continuation (SWF-211).
* The default value for the maxContinuations property of the ContinuationFlowExecutionRepository
  is now 30. It used to be -1 (unlimited).